00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    app: metier
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
  labels:
    app: metier
