01_pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leia-deployment
  namespace: ns1
spec:
  selector:
    matchLabels:
      name: leia
  replicas: 1
  template:
    metadata:
      labels:
        name: leia
      namespace: ns1
    spec:
      containers:
      - name: leia-container
        image: quay.io/toolbx-images/debian-toolbox:13
        #image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: luke-pod
  namespace: ns2
  labels:
    name: luke
spec:
  containers:
  - name: luke-container
    image: quay.io/cilium/json-mock:v1.3.8@sha256:5aad04835eda9025fe4561ad31be77fd55309af8158ca8663a72f6abb78c2603
---
apiVersion: v1
kind: Pod
metadata:
  name: vader-pod
  namespace: ns2
  labels:
    name: vader
spec:
  containers:
  - name: vader-container
    image: quay.io/cilium/json-mock:v1.3.8@sha256:5aad04835eda9025fe4561ad31be77fd55309af8158ca8663a72f6abb78c2603
