02_security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
  labels:
    app: metier
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: sec-ctx-demo
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        add:
        - NET_ADMIN
        - NET_RAW
        - SYS_CHROOT
      runAsUser: 0
      privileged: true
